[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI/InfoPanelNew/InfoLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/InfoPanelNew/InfoPanelNew.gd" type="Script" id=2]
[ext_resource path="res://Font/Arial.tres" type="DynamicFont" id=3]
[ext_resource path="res://GUI/InfoPanelNew/Infos.gd" type="Script" id=4]

[node name="InfoPanelNew" type="CanvasLayer"]
layer = 10
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
self_modulate = Color( 0.568627, 0.592157, 1, 0.784314 )
margin_left = 172.0
margin_top = 384.0
margin_right = 428.0
margin_bottom = 640.0
rect_min_size = Vector2( 256, 256 )
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 249.0
margin_bottom = 249.0
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
modulate = Color( 0.976471, 1, 0.603922, 1 )
margin_top = 43.0
margin_right = 242.0
margin_bottom = 79.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Genel Başlık"
align = 1
valign = 1

[node name="Infos" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 242.0
margin_bottom = 199.0
script = ExtResource( 4 )

[node name="InfoLabel" parent="CenterContainer/PanelContainer/VBoxContainer/Infos" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 242.0
margin_bottom = 36.0

[node name="InfoLabel2" parent="CenterContainer/PanelContainer/VBoxContainer/Infos" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 242.0
margin_bottom = 76.0

[node name="InfoLabel3" parent="CenterContainer/PanelContainer/VBoxContainer/Infos" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 242.0
margin_bottom = 116.0

[connection signal="gui_input" from="CenterContainer" to="." method="_on_CenterContainer_gui_input"]
